--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -28,46 +28,53 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="vertical">
+
             <TextView
+                android:id="@+id/list_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Title"
-                android:id="@+id/list_title"
                 android:layout_margin="7dp"
+                android:text="Title"
                 android:textSize="18dp"
-                android:textStyle="bold"
-                />
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="7dp"
                 android:text="Description"
                 android:textSize="15dp"
-                android:textStyle="italic"/>
+                android:textStyle="italic" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/list_img_delete"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:layout_margin="7dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginRight="7dp"
+                android:layout_marginTop="9dp"
                 android:contentDescription="Delete Image"
-                android:src="@drawable/ic_discard"
-                android:id="@+id/list_img_delete"/>
+                android:src="@drawable/ic_discard" />
+
             <ImageView
+                android:id="@+id/list_img_add"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:layout_margin="7dp"
+                android:layout_marginBottom="9dp"
+                android:layout_marginRight="7dp"
+                android:layout_marginTop="8dp"
                 android:contentDescription="Make Copy"
-                android:src="@drawable/ic_search"
-                android:id="@+id/list_img_add"/>
+                android:padding="2dp"
+                android:src="@drawable/ic_make_copy" />
 
         </LinearLayout>
 
