--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,25 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     android:background="@color/colorPrimary"
-    android:id="@+id/toolbar"
 
     app:layout_constraintRight_toRightOf="parent"
-    android:elevation="15dp"
 
-    android:title="@string/app_name"
-    android:subtitle="bakwaas"
     app:popupTheme="@menu/menu"
 
     android:padding="8dp"
-
-    >
-
-
-</Toolbar>
+    />
 
