--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+    tools:context="com.blackbox.app.designbasics.app.MainActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.blackbox.app.designbasics.app.MainActivity">
+    android:orientation="vertical">
 
-    <LinearLayout
+    <include
+        layout="@layout/toolbar"
+        android:id="@+id/toolbar"/>
+
+    <android.support.v4.widget.DrawerLayout
+
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        >
 
-        <include
-            layout="@layout/toolbar"
-            android:id="@+id/toolbar"/>
+        <fragment
+            android:layout_width="@dimen/nav_drawer_width"
+            android:layout_height="match_parent"
+            android:name="com.blackbox.app.designbasics.app.NavigationDrawerFragment"
+            tools:layout="@layout/nav_drawer"
+
+            android:id="@+id/nav_drawer_fragment"
+            android:layout_gravity ="start"
+            />
+
+
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/recyclerView"/>
 
-    </LinearLayout>
 
-    <fragment
-        android:layout_width="@dimen/nav_drawer_width"
-        android:layout_height="match_parent"
-        android:name="com.blackbox.app.designbasics.app.NavigationDrawerFragment"
-        tools:layout="@layout/nav_drawer"
+    </android.support.v4.widget.DrawerLayout>
 
-        android:id="@+id/nav_drawer_fragment"
-        android:layout_gravity ="start"
-        />
 
-</android.support.v4.widget.DrawerLayout>
+
+
+</LinearLayout>
