--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -23,7 +23,7 @@
             android:layout_margin="7dp"
             android:contentDescription="Thumbnail"
             android:id="@+id/list_img"
-            android:src="@drawable/thumb_1_0"
+            android:src="@drawable/ic_search"
             />
 
         <LinearLayout
@@ -38,13 +38,13 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="7dp"
                 android:text="Title"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="7dp"
+                android:layout_marginLeft="7sp"
                 android:text="Description"
                 android:textSize="15dp"
                 android:textStyle="italic" />
