--- a/app/src/main/res/layout/list_item2.xml
+++ b/app/src/main/res/layout/list_item2.xml
@@ -5,7 +5,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    card_view:cardCornerRadius="5dp">
+    card_view:cardCornerRadius="5dp"
+    >
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -18,6 +19,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:contentDescription="Animal Image"
+            android:adjustViewBounds="true"
             android:src="@drawable/ani_dog_five"/>
 
         <TextView
@@ -26,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="5dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:text="Dummy Text"/>
 
     </LinearLayout>
